--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "landing-page",
+  "homepage": "https://roydist.github.io/react-gh-pages",
   "version": "0.1.0",
   "author": "Roy Distler",
   "private": true,
@@ -13,7 +14,9 @@
   },
   "scripts": {
     "start": "craco start && postcss src/App.css -o public/app.css",
-    "build": "craco build"
+    "build": "craco build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +29,7 @@
   ],
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
