--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "landing-page",
-  "homepage": "https://roydist.github.io/react-gh-pages",
+  "homepage": ".",
   "version": "0.1.0",
   "author": "Roy Distler",
   "private": true,
