--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "gh-pages": "^3.2.3",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "autoprefixer": "9.8.8",
+    "gh-pages": "3.2.3",
+    "postcss": "7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.17"
   }
 }
