--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "flowbite": "1.4.1",
     "react": "16.6.0",
     "react-dom": "16.6.0",
+    "react-scripts": "^4.0.3",
     "react-scroll": "1.7.10",
-    "styled-components": "5.3.5"
+    "styled-components": "^4.0.3"
   },
   "scripts": {
     "start": "craco start && postcss src/App.css -o public/app.css",
